...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Locations-->
        <scene sceneID="sOM-4k-w6Y">
            <objects>
                <tableViewController id="YE0-pw-iU9" customClass="LocationsTableViewController" customModule="Locations" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="PJC-Wf-Cd0">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="locationCell" textLabel="4uZ-s5-mR2" detailTextLabel="foe-Lg-Mhi" style="IBUITableViewCellStyleSubtitle" id="JjY-SD-enb">
...
                        <connections>
                            <outlet property="dataSource" destination="YE0-pw-iU9" id="ORs-Iw-I0S"/>
                            <outlet property="delegate" destination="YE0-pw-iU9" id="rmz-Ir-XZB"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Locations" id="PWz-zs-Edu">
                        <barButtonItem key="rightBarButtonItem" title="Sort" id="vgd-H4-Rfw">
                            <color key="tintColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="sortButtonAction:" destination="YE0-pw-iU9" id="ehL-0d-ICG"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
