//
//  Constants.swift
//  Locations
//
//  Created by Toheed Khan on 09/06/17.
//  Copyright © 2017 Toheed Khan. All rights reserved.
//

import Foundation


struct Constants {
    
    struct CellIdentifiers {
        static let LocationCell = "locationCell"
    }
    
    struct SegueIdentifiers {
        static let LocationDetail = "locationDetail"
    }
}
//enum CellIdentifiers: String {
//    case LocationCell = "locationCell"
//}
